# UC-Emu

./: .gitignore  CMakeLists.txt  README.md  build_both.bat  build_both.sh  test.cpp
include/: SteamAPI.h
src/: SteamAPI.cpp  SteamClient.cpp  dllmain.cpp  steam_api.rc
